fix overflow

--- a/client/assets/styles/scss/popover/popover-dns-mappings.scss
+++ b/client/assets/styles/scss/popover/popover-dns-mappings.scss
@@ -72,7 +72,7 @@
         top: -1px;
       }
 
-      .text-overflow {
+      .text-overflow:first-child {
         padding-right: 24px;
       }
     }
